Creating new Heroku app

--- a/generator/Templates/working_page.html
+++ b/generator/Templates/working_page.html
@@ -13,7 +13,7 @@
 {% if filepath %}
 <div class="flex">
     <p>
-        <a href="download/{{filepath}}">Download TXT</a>
+        <a href="{{filepath}}">Download TXT</a>
     </p>
 </div>
 
